@@ -62,6 +62,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <useModulePath>true</useModulePath>
+                    <!-- todo: Hack to deal with surefire deficiency -->
+                    <argLine>--add-modules=ALL-MODULE-PATH</argLine>
                     <systemProperties>
                         <property>
                             <name>gcLogFile</name>
@@ -76,21 +79,21 @@
                     <outputDirectory>${project.build.directory}/lib</outputDirectory>
                 </configuration>
             </plugin>
-            <!-- plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <configuration>
                     <executable>java</executable>
                     <arguments>
                         <argument>- -module-path</argument>
-                        <!- - Create the modulepath using all project dependencies and project build directory - ->
+                        <!-- Create the modulepath using all project dependencies and project build directory -->
                         <modulepath />
                         <argument>- -module</argument>
                         <argument>com.microsoft.gctoolkit.sample/com.microsoft.gctoolkit.sample.Main</argument>
                         <argument>${gcLogFile}</argument>
                     </arguments>
                 </configuration>
-            </plugin -->
+            </plugin>
         </plugins>
     </build>
 
